# asterisk

./: AGENTS.md  CMakeLists.txt  PROMPT.md  README.md  agent_main.py  app.py  mcp_config.json  opencode.json  requirements.txt  rm -rf build && cmake -B build -G Ninja -DCMAKE_BUILD_TYPE=Release -DCMAKE_CXX_FLAGS="-std=c++20 -Wall -Wextra -Werror" && cmake --build build --parallel  validate.sh
.github/workflows/: agent.yml
app/: __init__.py  converter.py  routes.py
app/static/css/: icons.css  style.css
app/static/js/: main.js
app/templates/: base.html  configure.html  download.html  index.html
examples/: main.cpp
include/: aes256gcm_crypter.h  cascade_crypter.h  chacha20poly1305_crypter.h  crypter_types.h  icrypter.h  key_derivation.h  secure_memory.h  utilities.h
logs/: app.log.10  app.log.5
src/: aes256gcm_crypter.cpp  cascade_crypter.cpp  chacha20poly1305_crypter.cpp  crypter.cpp  crypter.hpp  demo.cpp  key_derivation.cpp  secure_memory.cpp  utilities.cpp
static/: style.css
templates/: about.html  index.html
tests/: conftest.py  test_converter.py  test_crypter.cpp  test_routes.py
